2003-12-22  John Sullivan  <sullivan@apple.com>

	- WebKit part of fix for <rdar://problem/3515706>: 
	REGRESSION (100-118): Web Kit printing does not honor Page Setup scale factor

        Reviewed by Darin.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _userScaleFactorForPrintOperation:]):
	new method, extracts the scale factor provided by the user in
	the Page Setup dialog
        (-[WebHTMLView _scaleFactorForPrintOperation:]):
	take user scale factor into account
        (-[WebHTMLView knowsPageRange:]):
	renamed local var scaleFactor -> totalScaleFactor for clarity;
	take user scale factor into account for print width; now assumes
        computePageRects returns autoreleased result.

        * WebKit.pbproj/project.pbxproj:
	Xcode version wars; Darin says these don't affect the build.

2003-12-21  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed a storage leak

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _loadURL:referrer:loadType:target:triggeringEvent:form:formValues:]):
        Move the release of the request out of an if statement, since it's always needed.

2003-12-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3515255>: Standalone image drag makes ocassionally makes 2 copies

        Reviewed by john.

	* WebKit.pbproj/project.pbxproj: Xcode 1.1 file format change
        * WebView.subproj/WebImageView.h:
        * WebView.subproj/WebImageView.m: copied double-drag protection code from WebHTMLView
        (-[WebImageView mouseDown:]): set ignoringMouseDraggedEvents to NO
        (-[WebImageView mouseDragged:]): if ignoringMouseDraggedEvents, return
        (-[WebImageView draggedImage:endedAt:operation:]): set ignoringMouseDraggedEvents to YES

=== Safari-119 ===

2003-12-18  Richard Williamson   <rjw@apple.com>

	Fixed 3511415.  We have to un-visually order visually ordered text
	before passing to ATSU.

        Reviewed by John.
